--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="container">
                     <div class="hero-inner">
                         <div class="hero-copy">
-                            <h1 class="hero-title h2-mobile mt-0 is-revealing">Landing template for startups</h1>
+                            <h1 class="hero-title h2-mobile mt-0 is-revealing">TEEST 12345</h1>
                             <p class="hero-paragraph is-revealing">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
                             <p class="hero-cta is-revealing"><a class="button button-primary button-shadow" href="#">Pricing and plans</a></p>
                         </div>
@@ -442,7 +442,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright">&copy; 2018 Agnes, all rights reserved</div>
+                    <div class="footer-copyright">&copy; 2019 Canadian Tech Compagny</div>
                 </div>
             </div>
         </footer>
